Dev: generate random string for id field

--- a/depolitics/application/templates/application/index.html
+++ b/depolitics/application/templates/application/index.html
@@ -120,8 +120,8 @@
                     </div>
 
                     <div class="gift-card">
-                        <p>bitcoins</p>
-                        <p id="bitcoin-address">1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
+                        <p>cryptocoins</p>
+                        <p id="bitcoin-address">bitcoin: 1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
                     </div>
                 </div>
             </div>
