--- a/depolitics/application/templates/application/index.html
+++ b/depolitics/application/templates/application/index.html
@@ -19,7 +19,9 @@
 
     <body>
         <nav>
-            <h1><a href="https://depolitics.org">depolitics</a></h1>
+            <h1>
+                <a href="https://depolitics.org">depolitics</a>
+            </h1>
         </nav>
 
         <div class="container">
@@ -43,71 +45,118 @@
                     <br><span class="link" id="link-add">add</span> more politicians to the database and generate their IS;
                     <br> or <span class="link" id="link-search">search</span> for one's identity by the IS if you must
                 </p>
-
             </div>
 
             <div class="content content-add" id="content-add">
-                <div class="input-group">
-                    <input type="" name="" placeholder="first Name" tabindex="1">       
-                </div>
+                <form id="add-form">
+                    {% csrf_token %}
+                    <div class="input-group">
+                        <input 
+                            type="text"
+                            name="first_name"
+                            placeholder="first Name"
+                            id="input-first-name"
+                            tabindex="1"
+                            required
+                            autofocus
+                        >       
+                    </div>
 
-                <div class="input-group">
-                    <input type="" name="" placeholder="last Name" tabindex="1">
-                </div>
+                    <div class="input-group">
+                        <input
+                            type="text"
+                            name="last_name"
+                            placeholder="last Name"
+                            id="input-last-name"
+                            tabindex="1"
+                            required
+                        >
+                    </div>
 
-                <div class="input-group">                    
-                    <textarea rows="1" placeholder="name variants, comma separated" tabindex="1"></textarea>
-                </div>
+                    <div class="input-group">                    
+                        <textarea 
+                            rows="1" 
+                            name="name_variants" 
+                            placeholder="name variants, comma separated" 
+                            id="input-name-variants"
+                            tabindex="1"></textarea>
+                    </div>
 
-                <div class="input-group">                    
-                    <input type="" name="" placeholder="current political function" tabindex="1">
-                </div>
+                    <div class="input-group">                    
+                        <input type="text" 
+                            name="current_function" 
+                            placeholder="current political function" 
+                            id="input-current-function"
+                            tabindex="1" 
+                            required
+                        >
+                    </div>
 
-                <div class="input-group">                    
-                    <textarea rows="1" placeholder="previous political functions, comma separated" tabindex="1"></textarea>
-                </div>
+                    <div class="input-group">                    
+                        <textarea 
+                            rows="1" 
+                            name="previous_functions"
+                            placeholder="previous political functions, comma separated"
+                            id="input-previous-functions"
+                            tabindex="1"></textarea>
+                    </div>
 
-                <div class="input-group">   
-                    <button class="button" tabindex="1">add</button>
-                </div>         
+                    <div class="input-group">   
+                        <button
+                            class="button"
+                            type="submit"
+                            value="OK"
+                            tabindex="1">add
+                        </button>
+                    </div>
 
-                <div class="input-group">
-                    <p>the Identification String is<br>wgnisy6s</p>
-                </div>         
+                    <div class="input-group">
+                        <p id="text-id-string"></p>
+                    </div>     
+                </form>    
             </div>
 
             <div class="content content-search" id="content-search">
-                <div class="input-group">                    
-                    <input type="" name="" placeholder="Identification String">
-                </div>
+                <form action="{% url 'search_id_string' %}" method="GET">
+                    <div class="input-group">                    
+                        <input
+                            type="text"
+                            name="identification_string"
+                            placeholder="Identification String"
+                            id="input-search-string"
+                            required
+                            autofocus
+                        >
+                    </div>
 
-                <div class="input-group">                    
-                    <button class="button">search</button>
-                </div>
+                    <div class="input-group">                    
+                        <button type="submit" class="button">search</button>
+                    </div>
 
-                <div class="input-group">
-                    <input type="" name="" placeholder="first Name">       
-                </div>
+                    <div class="input-group">
+                        <input type="" name="" placeholder="first Name">       
+                    </div>
 
-                <div class="input-group">
-                    <input type="" name="" placeholder="last Name">
-                </div>
+                    <div class="input-group">
+                        <input type="" name="" placeholder="last Name">
+                    </div>
 
-                <div class="input-group">                    
-                    <textarea rows="1" placeholder="name variants, comma separated"></textarea>
-                </div>
+                    <div class="input-group">                    
+                        <textarea rows="1" placeholder="name variants, comma separated"></textarea>
+                    </div>
 
-                <div class="input-group">                    
-                    <input type="" name="" placeholder="current political function">
-                </div>
+                    <div class="input-group">                    
+                        <input type="" name="" placeholder="current political function">
+                    </div>
 
-                <div class="input-group">                    
-                    <textarea rows="1" placeholder="previous political functions, comma separated"></textarea>
-                </div>
+                    <div class="input-group">                    
+                        <textarea rows="1" placeholder="previous political functions, comma separated"></textarea>
+                    </div>
 
-                <div class="input-group">                    
-                    <button class="button">save</button>
-                </div>
+                    <div class="input-group">                    
+                        <button class="button">save</button>
+                    </div>
+                </form>
             </div>
 
             <div class="content content-gift" id="content-gift">
@@ -125,14 +174,15 @@
                     </div>
                 </div>
             </div>
-
         </div>    
 
         <footer id="footer">
-            <h1>a <a href="https://caveljan.com">caveljan</a> realization</h1>
+            <h1>
+                a <a href="https://caveljan.com">caveljan</a> realization
+            </h1>
         </footer>
-
 <!-- 
+ 
 {% if politicians_list %}
     {% for politician in politicians_list %}
         <ul>
@@ -147,9 +197,51 @@
 {% else %}
     <p>Add politicians</p>
 {% endif %} 
--->
+ -->
 
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous">
+        </script>
         <script type="text/javascript" src="{% static 'application/js/script.js' %}"></script>
+
+        <script type="text/javascript">
+            $(document).on("submit", "#add-form", function(e) {
+                e.preventDefault();
+
+                $.ajax({
+                    type: "POST",
+                    url: "/add/",
+                    data: {
+                        first_name: $("#input-first-name").val(),
+                        last_name: $("#input-last-name").val(),
+                        name_variants: $("#input-name-variants").val(),
+                        current_function: $("#input-current-function").val(),
+                        previous_functions: $("#input-previous-functions").val(),
+                        csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val()
+                    },
+                    success: function(response){
+                        let data = response;
+                        console.log(data);
+                        let idString = data['identification_string'][0]['identification_string'];
+                        let name = $("#input-first-name").val() + " " + $("#input-last-name").val()
+                        let stringContent = 'the Identification String for the politician ' +
+                                             name + ' is ' + 
+                                             '<span class="input-id-string">' + idString + '</span>';
+                        
+                        $("#input-first-name").val('');
+                        $("#input-last-name").val('');
+                        $("#input-name-variants").val('');
+                        $("#input-current-function").val('');
+                        $("#input-previous-functions").val('');
+                        $("#text-id-string")[0].innerHTML = stringContent;
+
+                        // $("#input-id-string")[0].textContent = "success";
+                    }
+                });
+            });
+        </script>
     </body>
 </html>
 
