--- a/depolitics/application/static/application/css/style.css
+++ b/depolitics/application/static/application/css/style.css
@@ -259,6 +259,29 @@ footer h1 {
 }
 
 
+#search-response {
+    display: none;
+}
+
+.search-group {
+    font-size: 14px;
+    text-align: left;
+    margin-left: 25%;
+}
+
+.search-group span {
+    margin-left: 20px;
+    font-size: 18px;
+}
+
+@media (max-width: 1100px) {
+    .search-group {
+        margin-left: 5%;
+    }
+}
+
+
+
 /*-------*/
 /* GIFT */
 #content-gift {
