--- a/depolitics/application/templates/application/index.html
+++ b/depolitics/application/templates/application/index.html
@@ -54,7 +54,7 @@
                         <input 
                             type="text"
                             name="first_name"
-                            placeholder="first Name"
+                            placeholder="first Name*"
                             id="input-first-name"
                             tabindex="1"
                             required
@@ -66,7 +66,7 @@
                         <input
                             type="text"
                             name="last_name"
-                            placeholder="last Name"
+                            placeholder="last Name*"
                             id="input-last-name"
                             tabindex="1"
                             required
@@ -85,7 +85,7 @@
                     <div class="input-group">                    
                         <input type="text" 
                             name="current_function" 
-                            placeholder="current political function" 
+                            placeholder="current political function*" 
                             id="input-current-function"
                             tabindex="1" 
                             required
@@ -185,9 +185,15 @@
                         <p>with <a href="https://paypal.me/caveljan">PayPal</a></p>
                     </div>
 
-                    <div class="gift-card">
+                    <div class="gift-card" id="gift-card-crypto">
                         <p>cryptocoins</p>
-                        <p id="bitcoin-address">bitcoin: 1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
+                        <p id="gift-crypto-expand">&#9660;</p>
+                        <div id="gift-card-drawer">
+                            <p>bitcoin: 1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
+                            <p>ethereum: 1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
+                            <p>litecoin: 1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
+                            <p>ripple: 1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
+                        </div>
                     </div>
                 </div>
             </div>
