--- a/depolitics/application/templates/application/index.html
+++ b/depolitics/application/templates/application/index.html
@@ -5,205 +5,27 @@
 
         {% load static %}
 
-        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'application/images/favicon/apple-touch-icon.png' %}">
-        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'application/images/favicon/favicon-32x32.png' %}">
-        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'application/images/favicon/favicon-16x16.png' %}">
-        <link rel="manifest" href="{% static 'application/images/favicon/manifest.json' %}">
-        <link rel="mask-icon" href="{% static 'application/images/favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
-        <link rel="shortcut icon" href="{% static 'application/images/favicon/favicon.ico' %}">
-        <meta name="msapplication-config" content="{% static 'application/images/favicon/browserconfig.xml' %}">
-        <meta name="theme-color" content="#ffffff">
+        {% include "./elements/favicon.html" %}
 
         <link rel="stylesheet" type="text/css" href="{% static 'application/css/style.css' %}">
     </head>
 
     <body>
-        <nav>
-            <h1>
-                <a href="https://depolitics.org">depolitics</a>
-            </h1>
-        </nav>
+        {% include "./elements/header.html" %}
 
         <div class="container">
-            <div class="tabs">
-                <ul id="ul-tabs">
-                    <li class="active" id="tab-about">about</li>
-                    <li id="tab-add">add</li>
-                    <li id="tab-search">search</li>
-                    <li id="tab-gift">gift</li>
-                </ul>
-            </div>
+            {% include "./elements/content-tabs.html %}
            
-            <div class="content content-about" id="content-about">
-                <p>A politician should be <span class="no-one">no one.</span></p>
-                <p><span class="no-one">no one</span> should get into politics.</p>
-                <p>The first step towards a politics <span class="no-one">of no one</span> is to make the Name irrelevant.</p>
-                <p>Therefore, the IS, the Identification String, is to be used to replace the Name of the politician with an arbitrary, unpronounceable, unnameable, not-for-humans string of characters.</p>
-                <p>We shall not hope that the obfuscation of the Name will bring us closer to the Merit. However, we ought to aspire that it shall near Objectivity to us, even with the risk of Actor deresponsibilization. Or maybe in spite of it, after such a great deal of unresponsiveness (from the Actor to our Will), once unburdened, irresponsibility will open to the Ethic.</p>
-                <p class="call-to-action">
-                    <span class="link" id="link-use">use</span> the browser extension to replace the Name with the IS on every web page;
-                    <br><span class="link" id="link-add">add</span> more politicians to the database and generate their IS;
-                    <br> or <span class="link" id="link-search">search</span> for one's identity by the IS if you must
-                </p>
-            </div>
+            {% include "./elements/content-about.html %}
 
-            <div class="content content-add" id="content-add">
-                <form id="add-form">
-                    {% csrf_token %}
-                    <div class="input-group">
-                        <input 
-                            type="text"
-                            name="first_name"
-                            placeholder="first Name*"
-                            id="input-first-name"
-                            tabindex="1"
-                            required
-                            autofocus
-                        >       
-                    </div>
+            {% include "./elements/content-add.html %}
 
-                    <div class="input-group">
-                        <input
-                            type="text"
-                            name="last_name"
-                            placeholder="last Name*"
-                            id="input-last-name"
-                            tabindex="1"
-                            required
-                        >
-                    </div>
+            {% include "./elements/content-search.html %}
 
-                    <div class="input-group">                    
-                        <textarea 
-                            rows="1" 
-                            name="name_variants" 
-                            placeholder="name variants, comma separated" 
-                            id="input-name-variants"
-                            tabindex="1"></textarea>
-                    </div>
-
-                    <div class="input-group">                    
-                        <input type="text" 
-                            name="current_function" 
-                            placeholder="current political function*" 
-                            id="input-current-function"
-                            tabindex="1" 
-                            required
-                        >
-                    </div>
-
-                    <div class="input-group">                    
-                        <textarea 
-                            rows="1" 
-                            name="previous_functions"
-                            placeholder="previous political functions, comma separated"
-                            id="input-previous-functions"
-                            tabindex="1"></textarea>
-                    </div>
-
-                    <div class="input-group">   
-                        <button
-                            class="button"
-                            type="submit"
-                            value="OK"
-                            tabindex="1">add
-                        </button>
-                    </div>
-
-                    <div class="input-group">
-                        <p id="text-id-string"></p>
-                    </div>     
-                </form>    
-            </div>
-
-            <div class="content content-search" id="content-search">
-                <form id="search-form"">
-                    <div class="input-group">                    
-                        <input
-                            type="text"
-                            name="identification_string"
-                            placeholder="Identification String"
-                            id="input-search-string"
-                            required
-                            autofocus
-                        >
-                    </div>
-
-                    <div class="input-group">                    
-                        <button type="submit" class="button">search</button>
-                    </div>
-
-                    <div id="search-response">
-                        <div class="input-group">
-                            <div class="search-group">
-                                first Name <span id="search-first-name"></span>
-                            </div>
-                            <!-- <input type="" name="" placeholder="first Name">        -->
-                        </div>
-
-                        <div class="input-group">
-                            <div class="search-group">
-                                last Name <span id="search-last-name"></span>
-                            </div>
-                            <!-- <input type="" name="" placeholder="last Name"> -->
-                        </div>
-
-                        <div class="input-group">
-                            <div class="search-group">
-                                name variants <span id="search-name-variants"></span>
-                            </div>
-                            <!-- <textarea rows="1" placeholder="name variants, comma separated"></textarea> -->
-                        </div>
-
-                        <div class="input-group">    
-                            <div class="search-group">
-                                current political function <span id="search-current-function"></span>
-                            </div>            
-                            <!-- <input type="" name="" placeholder="current political function"> -->
-                        </div>
-
-                        <div class="input-group">    
-                            <div class="search-group">
-                                previous political functions <span id="search-previous-functions"></span>
-                            </div> 
-                            <!-- <textarea rows="1" placeholder="previous political functions, comma separated"></textarea> -->
-                        </div>
-
-                        <div class="input-group">                    
-                            <!-- <button class="button">save</button> -->
-                        </div>
-                    </div>
-                </form>
-            </div>
-
-            <div class="content content-gift" id="content-gift">
-                <p>if you would enjoy gifting currency for server time or for whatever reason, consider</p>
-                
-                <div class="gift-wrapper">
-                    <div class="gift-card">
-                        <p>dollars</p>
-                        <p>with <a href="https://paypal.me/caveljan">PayPal</a></p>
-                    </div>
-
-                    <div class="gift-card" id="gift-card-crypto">
-                        <p>cryptocoins</p>
-                        <p id="gift-crypto-expand">&#9660;</p>
-                        <div id="gift-card-drawer">
-                            <p>bitcoin: 1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
-                            <p>ethereum: 1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
-                            <p>litecoin: 1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
-                            <p>ripple: 1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% include "./elements/content-gift.html %}
         </div>
 
-        <footer id="footer">
-            <h1>
-                a <a href="https://caveljan.com">caveljan</a> realization
-            </h1>
-        </footer>
+        {% include "./elements/footer.html" %}
 
         <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -211,76 +33,6 @@
             crossorigin="anonymous">
         </script>
         <script type="text/javascript" src="{% static 'application/js/script.js' %}"></script>
-
-        <script type="text/javascript">
-            $(document).on("submit", "#add-form", function(e) {
-                e.preventDefault();
-
-                $.ajax({
-                    type: "POST",
-                    url: "/add/",
-                    data: {
-                        first_name: $("#input-first-name").val(),
-                        last_name: $("#input-last-name").val(),
-                        name_variants: $("#input-name-variants").val(),
-                        current_function: $("#input-current-function").val(),
-                        previous_functions: $("#input-previous-functions").val(),
-                        csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val()
-                    },
-                    success: function(response){
-                        let data = response;
-                        console.log(data);
-                        let idString = data['identification_string'][0]['identification_string'];
-                        let name = $("#input-first-name").val() + " " + $("#input-last-name").val()
-                        let stringContent = 'the Identification String for the politician ' +
-                                             name + ' is ' + 
-                                             '<span class="input-id-string">' + idString + '</span>';
-                        
-                        $("#input-first-name").val('');
-                        $("#input-last-name").val('');
-                        $("#input-name-variants").val('');
-                        $("#input-current-function").val('');
-                        $("#input-previous-functions").val('');
-                        $("#text-id-string")[0].innerHTML = stringContent;
-
-                        // $("#input-id-string")[0].textContent = "success";
-                    }
-                });
-            });
-        </script>
-
-        <script type="text/javascript">
-            $(document).on("submit", "#search-form", function(e) {
-                e.preventDefault();
-
-                $.ajax({
-                    type: "POST",
-                    url: "/search/",
-                    data: {
-                        identification_string: $("#input-search-string").val(),
-                        csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val()
-                    },
-                    success: function(response){
-                        let data = response;
-                        let politician = data['politician'][0];
-                        let firstName = politician['first_name'];
-                        let lastName = politician['last_name'];
-                        let nameVariants = politician['name_variants']
-                        let currentFunction = politician['current_function']
-                        let previousFunctions = politician['previous_functions']
-                        console.log(firstName);
-                        console.log(lastName);
-
-                        $("#search-response").css("display", "block");
-                        $("#search-first-name").text(firstName);
-                        $("#search-last-name").text(lastName);
-                        $("#search-name-variants").text(nameVariants);
-                        $("#search-current-function").text(currentFunction);
-                        $("#search-previous-functions").text(previousFunctions);
-                    }
-                });
-            });
-        </script>
     </body>
 </html>
 
