Setup: content about extension

--- a/depolitics/application/templates/application/elements/content-search.html
+++ b/depolitics/application/templates/application/elements/content-search.html
@@ -14,44 +14,43 @@
             <button type="submit" class="button">search</button>
         </div>
 
+<!--         <div class="input-group">     
+            <p>The djasjda Identification String has no current assignment.</p>               
+        </div> -->
+
         <div id="search-response">
             <div class="input-group">
                 <div class="search-group">
-                    first Name <span id="search-first-name"></span>
+                    first Name <span contenteditable id="search-first-name"></span>
                 </div>
-                <!-- <input type="" name="" placeholder="first Name">        -->
             </div>
 
             <div class="input-group">
                 <div class="search-group">
-                    last Name <span id="search-last-name"></span>
+                    last Name <span contenteditable id="search-last-name"></span>
                 </div>
-                <!-- <input type="" name="" placeholder="last Name"> -->
             </div>
 
             <div class="input-group">
                 <div class="search-group">
-                    name variants <span id="search-name-variants"></span>
+                    name variants <span contenteditable id="search-name-variants"></span>
                 </div>
-                <!-- <textarea rows="1" placeholder="name variants, comma separated"></textarea> -->
             </div>
 
             <div class="input-group">    
                 <div class="search-group">
-                    current political function <span id="search-current-function"></span>
+                    current political function <span contenteditable id="search-current-function"></span>
                 </div>            
-                <!-- <input type="" name="" placeholder="current political function"> -->
             </div>
 
             <div class="input-group">    
                 <div class="search-group">
-                    previous political functions <span id="search-previous-functions"></span>
+                    previous political functions <span contenteditable id="search-previous-functions"></span>
                 </div> 
-                <!-- <textarea rows="1" placeholder="previous political functions, comma separated"></textarea> -->
             </div>
 
             <div class="input-group">                    
-                <!-- <button class="button">save</button> -->
+                <button class="button">save</button>
             </div>
         </div>
     </form>
