--- a/depolitics/application/templates/application/elements/content-add.html
+++ b/depolitics/application/templates/application/elements/content-add.html
@@ -8,6 +8,7 @@
                 placeholder="first Name*"
                 id="input-first-name"
                 tabindex="1"
+                autofocus
                 required
             >       
         </div>
