--- a/depolitics/application/templates/application/elements/content-gift.html
+++ b/depolitics/application/templates/application/elements/content-gift.html
@@ -3,18 +3,17 @@
     
     <div class="gift-wrapper">
         <div class="gift-card">
-            <p>dollars</p>
+            <p>acryptos</p>
             <p>with <a href="https://paypal.me/caveljan">PayPal</a></p>
         </div>
 
         <div class="gift-card" id="gift-card-crypto">
-            <p>cryptocoins</p>
+            <p>cryptos</p>
             <p id="gift-crypto-expand">&#9660;</p>
             <div id="gift-card-drawer">
-                <p>bitcoin<br> 1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
-                <p>ethereum<br> 1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
-                <p>litecoin<br> 1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
-                <p>ripple<br> 1FxGWLvnDY39h6zCxdd1GMMj21CzK5s3US</p>
+                <p>BTC<br> 1CKq4q1bUiMoz29XtdP9DYp2GsNavC5AKt</p>
+                <p>ETH<br> 0xDb31358ec77526458Dba0f4b2246E5033D232Bc0</p>
+                <p>LTC<br> LiG5tTW8gpJzXr5tW6akNZH1uFmFHT5zrn</p>
             </div>
         </div>
     </div>
