--- a/depolitics/application/templates/application/elements/content-search.html
+++ b/depolitics/application/templates/application/elements/content-search.html
@@ -6,6 +6,7 @@
                 name="identification_string"
                 placeholder="Identification String"
                 id="input-search-string"
+                autofocus
                 required
             >
         </div>
