Dev: deJqueryfy Ajax add form

--- a/depolitics/application/static/application/css/style.css
+++ b/depolitics/application/static/application/css/style.css
@@ -260,6 +260,11 @@ Content Add
     color: hsl(0, 0%, 10%);
 }
 
+.input-id-string {
+    padding: 7px;
+    background-color: hsl(0, 0%, 30%);
+}
+
 
 /* --------------------------
 Content Search
