--- a/depolitics/application/templates/application/elements/content-add.html
+++ b/depolitics/application/templates/application/elements/content-add.html
@@ -57,6 +57,7 @@
                 class="button"
                 type="submit"
                 value="OK"
+                id="input-add-submit"
                 tabindex="1">add
             </button>
         </div>
