--- a/depolitics/application/templates/application/elements/content-search.html
+++ b/depolitics/application/templates/application/elements/content-search.html
@@ -12,7 +12,11 @@
         </div>
 
         <div class="input-group">                    
-            <button type="submit" class="button">search</button>
+            <button
+                type="submit"
+                class="button"
+                id="input-search-submit">search
+            </button>
         </div>
 
 <!--         <div class="input-group">     
@@ -50,9 +54,9 @@
                 </div> 
             </div>
 
-            <div class="input-group">                    
+<!--             <div class="input-group">                    
                 <button class="button">save</button>
-            </div>
+            </div> -->
         </div>
     </form>
 </div>
