--- a/depolitics/application/templates/application/elements/content-about.html
+++ b/depolitics/application/templates/application/elements/content-about.html
@@ -1,4 +1,7 @@
+{% load static %}
+
 <div class="content content-about" id="content-about">
+    <img class="depolitics-image" src="{% static 'application/images/depolitics.png' %}">
     <p>A politician should be <span class="no-one">no one.</span></p>
     <p><span class="no-one">no one</span> should get into politics.</p>
     <p>The first step towards a politics <span class="no-one">of no one</span> is to make the Name irrelevant.</p>
@@ -6,7 +9,7 @@
     <p>We shall not hope that the obfuscation of the Name will bring us closer to the Merit. However, we ought to aspire that it shall near Objectivity to us, even with the risk of Actor deresponsibilization. Or maybe in spite of it, after such a great deal of unresponsiveness (from the Actor to our Will), once unburdened, irresponsibility will open to the Ethic.</p>
     <p>The depolitical usage of names is not a calling to a politics without the political, an ideology <i>sans</i> ideology. It could even be said that by masking the Name of the Actor it is the most ideo-logical politics since it only cares and attends to the arrival into Name of the Idea.</p>
     <p class="call-to-action">
-        <span class="link" id="link-use">use</span> the browser extension to replace the Name with the IS on every web page;
+        <a href="/dynamic-link-to-user-browser-extension/">use</a> the browser extension to replace the Name with the IS on every web page;
         <br>
         <span class="link" id="link-add">add</span> more politicians to the database and generate their IS;
         <br>
