--- a/depolitics/application/templates/application/elements/content-search.html
+++ b/depolitics/application/templates/application/elements/content-search.html
@@ -8,6 +8,7 @@
                 id="input-search-string"
                 autofocus
                 required
+                maxlength="8"
             >
         </div>
 
@@ -19,9 +20,8 @@
             </button>
         </div>
 
-<!--         <div class="input-group">     
-            <p>The djasjda Identification String has no current assignment.</p>               
-        </div> -->
+        <div class="input-group" id="search-found">              
+        </div>
 
         <div id="search-response">
             <div class="input-group">
