--- a/depolitics/application/templates/application/elements/content-add.html
+++ b/depolitics/application/templates/application/elements/content-add.html
@@ -63,7 +63,9 @@
         </div>
 
         <div class="input-group">
-            <p id="text-id-string"></p>
+            <div class="input-message">
+                <p id="text-id-string"></p>
+            </div>
         </div>     
     </form>    
 </div>
