--- a/depolitics/application/templates/application/elements/content-search.html
+++ b/depolitics/application/templates/application/elements/content-search.html
@@ -12,7 +12,7 @@
             >
         </div>
 
-        <div class="input-group">                    
+        <div class="input-group">                 
             <button
                 type="submit"
                 class="button"
@@ -20,7 +20,10 @@
             </button>
         </div>
 
-        <div class="input-group" id="search-found">              
+        <div class="input-group">
+            <div class="input-message">
+                <div id="search-found"></div>
+            </div>
         </div>
 
         <div id="search-response">
