Dev: button disable bug fix, cleanup

--- a/depolitics/application/templates/application/elements/content-search.html
+++ b/depolitics/application/templates/application/elements/content-search.html
@@ -9,6 +9,10 @@
                 autofocus
                 required
                 maxlength="8"
+                spellcheck="false"
+                autocomplete="off"
+                autocorrect="off"
+                autocapitalize="off"
             >
         </div>
 
