--- a/depolitics/application/static/application/css/style.css
+++ b/depolitics/application/static/application/css/style.css
@@ -23,6 +23,10 @@ body {
     font-size: 18px;
 }
 
+::selection {
+    background-color: hsl(0, 0%, 70%);
+}
+
 h1, h2 {
     font-weight: normal;    
 }
@@ -250,11 +254,6 @@ Content Add
     resize: vertical;
 }
 
-.input-message {
-    text-align: center;
-    margin-left: -30px;
-}
-
 @media (max-width: 1000px) {
     .input-message {
         margin-left: 0px;
@@ -277,8 +276,18 @@ Content Add
     color: hsl(0, 0%, 10%);
 }
 
+#text-id-string {
+    height: 40px;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .input-id-string {
-    padding: 7px;
+    padding: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
     background-color: hsl(0, 0%, 30%);
 }
 
@@ -313,23 +322,26 @@ Content Search
     }
 }
 
+#input-search-string {
+    text-align: center;
+}
+
 #search-found p {
-    line-height: 2.5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-top: 60px;
     font-size: 16px;
 }
 
-
 .input-close-result {
-    position: absolute;
     width: 20px;
     height: 20px;
+    top: 10px;
+    margin-left: 15px;
     border-radius: 50%;
     line-height: 18px;
-    padding-right: 1px;
     font-size: 12px;
-    margin-left: 15px;
-    margin-top: 3px;
     color: hsl(0, 0%, 90%);
     background-color: hsl(0, 0%, 30%);
     cursor: pointer;
