--- a/depolitics/application/templates/application/elements/content-gift.html
+++ b/depolitics/application/templates/application/elements/content-gift.html
@@ -11,9 +11,9 @@
             <p>cryptos</p>
             <p id="gift-crypto-expand">&#9660;</p>
             <div id="gift-card-drawer">
-                <p>BTC<br> 1CKq4q1bUiMoz29XtdP9DYp2GsNavC5AKt</p>
-                <p>ETH<br> 0xDb31358ec77526458Dba0f4b2246E5033D232Bc0</p>
-                <p>LTC<br> LiG5tTW8gpJzXr5tW6akNZH1uFmFHT5zrn</p>
+                <p>BTC<br> <span id="btc-address">1CKq4q1bUiMoz29XtdP9DYp2GsNavC5AKt</span></p>
+                <p>ETH<br> <span id="eth-address">0xDb31358ec77526458Dba0f4b2246E5033D232Bc0</span></p>
+                <p>LTC<br> <span id="ltc-address">LiG5tTW8gpJzXr5tW6akNZH1uFmFHT5zrn</span></p>
             </div>
         </div>
     </div>
