--- a/depolitics/application/static/application/css/style.css
+++ b/depolitics/application/static/application/css/style.css
@@ -163,6 +163,7 @@ Content
 }
 
 
+
 /* --------------------------
 Content About
 ---------------------------*/
@@ -209,6 +210,7 @@ Content About
 }
 
 
+
 /* --------------------------
 Content Add
 ---------------------------*/
@@ -244,7 +246,6 @@ Content Add
     -moz-box-shadow: 0px 1px 0px 0px hsl(0, 0%, 100%);
     box-shadow: 0px 1px 0px 0px hsl(0, 0%, 100%);
 }
-
 
 ::placeholder {
     color: hsl(0, 0%, 70%);
@@ -296,6 +297,13 @@ Content Add
 .input-id-string::selection {
     background-color: hsl(0, 0%, 70%);
 }
+
+@media (max-width: 420px) {
+    #input-previous-functions {
+        height: 60px;
+    }
+}
+
 
 
 /* --------------------------
