--- a/depolitics/application/templates/application/elements/content-about.html
+++ b/depolitics/application/templates/application/elements/content-about.html
@@ -15,6 +15,6 @@
         <br>
         or <span class="link" id="link-search">search</span> for one's identity by the IS if you must;
         <br>
-        <br>the code is on <a href="https://github.com/caveljan/depolitics">github</a>
+        <br>the code is on <a taget="_blank" href="https://github.com/caveljan/depolitics">github</a>
     </p>
 </div>
