--- a/depolitics/application/templates/application/elements/content-gift.html
+++ b/depolitics/application/templates/application/elements/content-gift.html
@@ -4,7 +4,7 @@
     <div class="gift-wrapper">
         <div class="gift-card">
             <p>acryptos</p>
-            <p>with <a href="https://paypal.me/caveljan">PayPal</a></p>
+            <p>with <a target="_blank" href="https://paypal.me/caveljan">PayPal</a></p>
         </div>
 
         <div class="gift-card" id="gift-card-crypto">
