--- a/depolitics/application/templates/application/elements/content-gift.html
+++ b/depolitics/application/templates/application/elements/content-gift.html
@@ -11,9 +11,9 @@
             <p>cryptos</p>
             <p id="gift-crypto-expand">&#9660;</p>
             <div id="gift-card-drawer">
-                <p>BTC<br> <span id="btc-address">1CKq4q1bUiMoz29XtdP9DYp2GsNavC5AKt</span></p>
-                <p>ETH<br> <span id="eth-address">0xDb31358ec77526458Dba0f4b2246E5033D232Bc0</span></p>
-                <p>LTC<br> <span id="ltc-address">LiG5tTW8gpJzXr5tW6akNZH1uFmFHT5zrn</span></p>
+                <p>BTC<br> <span id="btc-address">1CKoEnMU3Hy1UiWfJVBTruVSmrLvhDkXd6</span></p>
+                <p>ETH<br> <span id="eth-address">0x91936fc5A7e13ae96273E371fD3407B0F3ABc553</span></p>
+                <p>BCH<br> <span id="bch-address">qrlar2grfap9n86gfrm6z69yw56ezv35zyts7ufxjv</span></p>
             </div>
         </div>
     </div>
