--- a/depolitics/application/templates/application/index.html
+++ b/depolitics/application/templates/application/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name=viewport content="width=device-width, initial-scale=1">
+        <meta name="description" content="Replace the Names of politicians with a random string of characters.">
+
         <title>depolitics</title>
 
         {% load static %}
@@ -8,6 +12,16 @@
         {% include "./elements/favicon.html" %}
 
         <link rel="stylesheet" type="text/css" href="{% static 'application/css/style.css' %}">
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113311388-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-113311388-1');
+        </script>
     </head>
 
     <body>
