Dev: edit searched string

--- a/depolitics/application/templates/application/index.html
+++ b/depolitics/application/templates/application/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name=viewport content="width=device-width, initial-scale=1">
-        <meta name="description" content="Replace the Names of politicians with a random string of characters.">
+        <meta name="description" content="Replace the Names of politicians with random strings of characters.">
 
         <title>depolitics</title>
 
@@ -13,7 +13,6 @@
 
         <link rel="stylesheet" type="text/css" href="{% static 'application/css/style.css' %}">
         
-        <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113311388-1"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
@@ -44,6 +43,3 @@
         <script type="text/javascript" src="{% static 'application/js/script.js' %}"></script>
     </body>
 </html>
-
-
-
