--- a/depolitics/application/templates/application/elements/content-search.html
+++ b/depolitics/application/templates/application/elements/content-search.html
@@ -7,7 +7,6 @@
                 placeholder="Identification String"
                 id="input-search-string"
                 autofocus
-                required
                 maxlength="8"
                 spellcheck="false"
                 autocomplete="off"
@@ -18,7 +17,6 @@
 
         <div class="input-group">                 
             <button
-                type="submit"
                 class="button"
                 id="input-search-submit">search
             </button>
@@ -61,9 +59,11 @@
                 </div> 
             </div>
 
-<!--             <div class="input-group">                    
-                <button class="button">save</button>
-            </div> -->
+            {% if user.is_superuser %}
+                <div class="input-group">         
+                    <button class="button" id="input-edit-submit">save</button>
+                </div>
+             {% endif %}
         </div>
     </form>
 </div>
