--- a/extensions/chrome/css/styles.css
+++ b/extensions/chrome/css/styles.css
@@ -3,7 +3,7 @@ body {
     padding:0px;
     margin:0px;
     width:300px;
-    height:200px;
+    height:220px;
     color:white;
     text-align: center;
     background-color: hsl(0, 0%, 10%);
@@ -16,7 +16,7 @@ h1 {
 
 
 /* Title */
-#extTitle {
+#ext-title {
     text-align:center;
     padding: 0;
     margin: 15px 0px;
@@ -36,14 +36,14 @@ fieldset {
     padding: 0;
 }
 
-#extensionActive {
+#extension-active {
     margin: 0 auto;
     margin-top: 20px;
     margin-left: 109px;
     text-align: left;
 }
 
-#extensionActive input {
+#extension-active input {
     margin-bottom: 7px;
 }
 
@@ -51,38 +51,56 @@ label {
     position: absolute;
 }
 
+label:hover{
+    cursor: pointer;
+}
+
 
 /* Underform */
-#underForm {
+#under-form {
     color: hsl(0, 0%, 85%);
     line-height: 1;
     margin-top: 10px;
 }
 
-#underForm a {
+#under-form a {
     color: hsl(0, 0%, 85%);
     text-decoration: none;
 }
 
-#underForm a:hover {
+#under-form a:hover {
     color: hsl(0, 0%, 65%);
 }
 
-#underFormTable {
+#under-form-table {
     margin: 0 auto;
 }
 
-.leftTable {
+.left-table {
     text-align: right;
 }
 
-.rightTable {
+.right-table {
     text-align: left;
 }
 
 
+/* Update Database */
+#update-database {
+    position: fixed;
+    margin: 0 auto;
+    bottom: 30px;
+    width: 100%;
+    margin-top: 15px;
+}
+
+#update-database:hover {
+    cursor: pointer;
+    color: hsl(0, 0%, 65%);
+}
+
 /* Options */
-#adjustOptions {
+#adjust-options {
     text-align: center;
     position: fixed;
     margin: 0 auto;
@@ -90,7 +108,7 @@ label {
     width: 100%;
 }
 
-#adjustOptions:hover {
+#adjust-options:hover {
     cursor: pointer;
     color: hsl(0, 0%, 65%);
 }
@@ -102,7 +120,8 @@ input[type=radio]:not(old){
   opacity: 0;
 }
 
-.radioButton {
+.radio-button {
+    cursor: pointer;
     display : inline-block;
     width: 0.875em;
     height: 0.875em;
