--- a/packages/depolitics.org/src/App/index.css
+++ b/packages/depolitics.org/src/App/index.css
@@ -18,7 +18,7 @@ body {
         'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: var(--background);
+    background: black;
     color: white;
     font-size: 14px;
 }
